# rfid-r200

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml
src/: async_rfid_reader.py  main.py  main_async.py  rfid_reader.py  utils.py
src/rfid_r200/: __init__.py  __version__.py  constants.py  exceptions.py  main.py  rfid_reader_sync.py  test.py  utils.py
tests/: conftest.py  test_async_reader.py  test_sync_reader.py
