[project]
name = "rfid-r200"
version = "0.1.0"
description = "Pure python library to work with RFID devices R200"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial-asyncio>=0.6",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
